# vsql-network-address

./: .gitignore  AGENTS.md  CMakeLists.txt  README.md  install.sql  manifest.json
.github/workflows/: ci.yml
cmake/: FindVillageSQL.cmake
mysql-test/r/: network_address_alter.result  network_address_crud.result  network_address_like.result
mysql-test/t/: network_address_alter.test  network_address_crud.test
src/: network_address.cc
test/r/: network_address_alter.result  network_address_create.result  network_address_crud.result  network_address_ctas.result  network_address_functions.result  network_address_like.result  network_address_validation.result
test/t/: network_address_alter.test  network_address_create.test  network_address_crud.test  network_address_ctas.test  network_address_functions.test  network_address_like.test  network_address_validation.test
